# ai-whisper-en-to-pl

./: .gitignore  README.md  pyproject.toml
src/meeting_app/: cli.py
