[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-whisper-en-to-pl"
version = "1.0.0"
description = "Local MP4/WAV -> Whisper transcription -> LLM summary -> optional PL translation (LM Studio)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "tqdm>=4.66.0",
]

[project.scripts]
meeting-app = "meeting_app.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
